--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </a>
             </div>
             <!-- New Resume Download Button -->
-            <a href="https://github.com/Joyson1/Joyson1.github.io/blob/main/resume.docx" download class="resume-button">Download Resume</a>
+            <a href="https://github.com/Joyson1/Joyson1.github.io/raw/main/resume.docx" download class="resume-button">Download Resume</a>
         </div>
     </div>
 
