--- a/index.html
+++ b/index.html
@@ -11,27 +11,27 @@
         <div class="scrolling-tiles">
             <a href="https://link-to-your-project-1.com" target="_blank" class="tile">
                 <img src="https://github.com/Joyson1/Joyson1.github.io/blob/main/image7.jpg?raw=true" alt="Project 1">
-                <div class="tile-description">An Excel project using XLOOKUP, INDEX MATCH, and Pivot Tables to create a dashboard.</div>
+                <div class="tile-description">Data Analysis in Excel.</div>
             </a>
 
             <a href="https://link-to-your-project-2.com" target="_blank" class="tile">
                 <img src="https://github.com/Joyson1/Joyson1.github.io/blob/main/image2.jpg?raw=true" alt="Project 2">
-                <div class="tile-description">Project 2 Description</div>
+                <div class="tile-description">Excel Dashboard on bikes</div>
             </a>
 
             <a href="https://link-to-your-project-3.com" target="_blank" class="tile">
                 <img src="https://github.com/Joyson1/Joyson1.github.io/blob/main/image3.jpg?raw=true" alt="Project 3">
-                <div class="tile-description">Project 3 Description</div>
+                <div class="tile-description">Marketing Campaign Analysis</div>
             </a>
 
             <a href="https://link-to-your-project-4.com" target="_blank" class="tile">
                 <img src="https://github.com/Joyson1/Joyson1.github.io/blob/main/image4.jpg?raw=true" alt="Project 4">
-                <div class="tile-description">Project 4 Description</div>
+                <div class="tile-description">Personal Financial Analysis</div>
             </a>
 
             <a href="https://link-to-your-project-5.com" target="_blank" class="tile">
                 <img src="https://github.com/Joyson1/Joyson1.github.io/blob/main/image6.jpg?raw=true" alt="Project 5">
-                <div class="tile-description">Project 5 Description</div>
+                <div class="tile-description">Stock Analysis</div>
             </a>
         </div>
     </header>
