--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="scrolling-tiles">
-            <a href="https://link-to-your-project-1.com" target="_blank" class="tile">
+            <a href="https://github.com/Joyson1/coffee_Orders_sales_Dashboard" target="_blank" class="tile">
                 <img src="https://github.com/Joyson1/Joyson1.github.io/blob/main/image7.jpg?raw=true" alt="Project 1">
                 <div class="tile-description">Data Analysis in Excel.</div>
             </a>
